--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -18,6 +20,9 @@
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "prettier": "^1.19.1",
+    "tslint": "^6.0.0",
     "typescript": "3.7.5"
   },
   "scripts": {
