--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "prettier": "^2.0.2",
     "typescript": "3.7.5"
   },
   "scripts": {
